--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-.tidyall.d
-.DS_Store
 *.swp
-/Plack-App-Catmandu-*
-/.build
-/_build*
-/Build
+.DS_Store
+.build
+.perl-version
+.tidyall.d/
+Build
+/Plack-App-Catmandu-Bag-*
+LICENSE
+MANIFEST*
+META.json
 MYMETA.*
-!META.json
-/.prove
+Makefile.PL
+_build
+blib
+cover_db
+cpanfile.snapshot
+local
